--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
+    "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
